--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,157 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    android:orientation="vertical">
+    android:padding="32dp"
+    tools:context=".weather.presentation.WeatherFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent">
+        android:text="@string/label_today"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            app:defaultQueryHint="@string/search_hint"
-            app:queryHint="@string/search_hint" />
-    </androidx.appcompat.widget.Toolbar>
+    <TextView
+        android:id="@+id/city_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
+        android:textColor="@android:color/black"
+        android:textSize="48sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_label" />
+
+    <ImageView
+        android:id="@+id/icon_today"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:contentDescription="weather symbol"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_label" />
+
+    <TextView
+        android:id="@+id/max_min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/city_name" />
+
+    <TextView
+        android:id="@+id/current"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@id/icon_today"
+        app:layout_constraintStart_toEndOf="@id/max_min"
+        app:layout_constraintTop_toBottomOf="@id/city_name" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+        android:id="@+id/next_days"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
         android:padding="32dp"
-        tools:context=".ui.main.presentation.WeatherFragment">
+        app:layout_constraintTop_toBottomOf="@id/current">
 
         <TextView
-            android:id="@+id/tv_label"
+            android:id="@+id/label_next_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_today"
+            android:text="@string/next_three_days"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/city_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:textColor="@android:color/black"
-            android:textSize="48sp"
+        <ImageView
+            android:id="@+id/symbolTomorrow"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_label" />
+            app:layout_constraintTop_toBottomOf="@id/label_next_days" />
 
         <ImageView
-            android:id="@+id/icon_today"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:contentDescription="weather symbol"
+            android:id="@+id/symbolDayAfter"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_label" />
-
-        <TextView
-            android:id="@+id/max_min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/city_name" />
+            app:layout_constraintTop_toTopOf="@id/symbolTomorrow" />
+
+        <ImageView
+            android:id="@+id/symbolTwoDaysLater"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/symbolTomorrow" />
 
         <TextView
-            android:id="@+id/current"
+            android:id="@+id/tempTomorrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@id/icon_today"
-            app:layout_constraintStart_toEndOf="@id/max_min"
-            app:layout_constraintTop_toBottomOf="@id/city_name" />
+            app:layout_constraintEnd_toEndOf="@id/symbolTomorrow"
+            app:layout_constraintStart_toStartOf="@id/symbolTomorrow"
+            app:layout_constraintTop_toBottomOf="@id/symbolTomorrow" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/next_days"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tempDayAfter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@android:color/white"
-            android:orientation="horizontal"
-            android:padding="32dp"
-            app:layout_constraintTop_toBottomOf="@id/current">
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/symbolDayAfter" />
 
-            <TextView
-                android:id="@+id/label_next_days"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/next_three_days"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/symbolTomorrow"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_marginTop="32dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_next_days" />
-
-            <ImageView
-                android:id="@+id/symbolDayAfter"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/symbolTomorrow" />
-
-            <ImageView
-                android:id="@+id/symbolTwoDaysLater"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/symbolTomorrow" />
-
-            <TextView
-                android:id="@+id/tempTomorrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="@id/symbolTomorrow"
-                app:layout_constraintStart_toStartOf="@id/symbolTomorrow"
-                app:layout_constraintTop_toBottomOf="@id/symbolTomorrow" />
-
-            <TextView
-                android:id="@+id/tempDayAfter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/symbolDayAfter" />
-
-            <TextView
-                android:id="@+id/tempTwoDaysLater"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/symbolTwoDaysLater" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tempTwoDaysLater"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/symbolTwoDaysLater" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
