--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="32dp"
     tools:context=".weather.presentation.WeatherFragment">
 
