--- a/mylibrary/src/main/res/layout/news_fragment.xml
+++ b/mylibrary/src/main/res/layout/news_fragment.xml
@@ -3,27 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news"
-    android:background="@android:color/darker_gray"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/darker_gray"
     android:padding="32dp"
-    android:paddingTop="0dp"
-    android:layout_height="wrap_content">
+    android:paddingTop="0dp">
+
+    <View
+        android:id="@+id/empty_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/news_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/news_highlights"
         android:textColor="@android:color/black"
         android:textSize="48sp"
-        android:text="@string/news_highlights"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/articles"
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/news_header" />
 
