--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -31,11 +31,12 @@
 
     <TextView
         android:id="@+id/city_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
         android:textColor="@android:color/black"
-        android:textSize="48sp"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toStartOf="@id/icon_today"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/todayHeader" />
 
